--- a/wp-content/themes/twentytwentyone/assets/sass/06-components/comments.scss
+++ b/wp-content/themes/twentytwentyone/assets/sass/06-components/comments.scss
@@ -177,7 +177,7 @@
 	}
 }
 
-.comment-content a {
+.comment-content {
 	word-wrap: break-word;
 }
 
