--- a/wp-content/themes/twentytwentyone/style-rtl.css
+++ b/wp-content/themes/twentytwentyone/style-rtl.css
@@ -4439,7 +4439,7 @@ h1.page-title {
 	margin: 0;
 }
 
-.comment-content a {
+.comment-content {
 	word-wrap: break-word;
 }
 
