--- a/wp-content/themes/twentytwentyone/style.css
+++ b/wp-content/themes/twentytwentyone/style.css
@@ -4459,7 +4459,7 @@ h1.page-title {
 	margin: 0;
 }
 
-.comment-content a {
+.comment-content {
 	word-wrap: break-word;
 }
 
